Added custom styling

--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,8 @@
     <head>
         <title>Flight Booking Assistant Demo</title>
     </head>
-    <body>
-        <iframe src='https://webchat.botframework.com/embed/flightreservationbot?s=0KNTu9jdn1c.cwA.Rxk.besJJ4qiHD9lpsHxt6p-5fDUd89ujwwHd4RyFMUFQyY' width="600" height="800" style="display:block; margin:0 auto; border: 0;"></iframe>
+    <body style="background-color: #44caff">
+        <h1 style="font-family:Calibri; color: white;text-align:center">Flight Reservation Bot</h1>
+        <iframe src='https://webchat.botframework.com/embed/flightreservationbot?s=0KNTu9jdn1c.cwA.Rxk.besJJ4qiHD9lpsHxt6p-5fDUd89ujwwHd4RyFMUFQyY' width="800" height="800" style="display:block; margin:0 auto; border: 0; background-color: white"></iframe>
     </body>
 </html>
